--- a/index.html
+++ b/index.html
@@ -18,29 +18,34 @@
         <option value="">Honolulu</option>       
       </select>
      <div class="city">
-      <h2>San Francisco</h2>  
-      <div class="date">
+       <div>
+      <h2>Chicago</h2>  
+       <div class="date">
         November 11, 2022
-      </div> 
-      <div class="time">10:52 PM</div>
-     </div>
+       </div> 
+      </div>
+        <div class="time">1:10 <small>PM</small></div>
+      </div>
+     
      <div class="city">
+       <div>
       <h2>Dubai</h2>  
-      <div class="date">
+       <div class="date">
         November 11, 2022
-      </div> 
-      <div class="time">10:52 PM</div>
-     </div>
-    </div>
+       </div> 
+      </div>
+        <div class="time">11:10 <small>PM</small></div>
+      </div>
+  
     <footer>
       <small>
         This project was coded by
-        <a
+        <strong><a
           href="mailto:galneufeld@gmail.com"
           target="_blank"
           title="Contact Gali Neufeld"
-          >Gali Neufeld</a
-        >
+          >Gali Neufeld</a> </strong>
+        
         and is
         <a
           href="https://github.com/GaliNeufeld/world-clock"
@@ -50,6 +55,7 @@
         >
       </small>
     </footer>
+    </div>
     <script src="javascript/index.js"></script>
   </body>
 </html>
