--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.38/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock- Gali Neufeld</title>
   </head>
   <body>
@@ -12,49 +14,48 @@
       <h1>World Clock</h1>
       <select name="" id="">
         <option value="">Select a city</option>
-        <option value="">New York</option>  
-        <option value="">Tel-Aviv</option>  
-        <option value="">Osaka</option> 
-        <option value="">Honolulu</option>       
+        <option value="">New York</option>
+        <option value="">Tel-Aviv</option>
+        <option value="">Osaka</option>
+        <option value="">Honolulu</option>
       </select>
-     <div class="city">
-       <div>
-      <h2>Chicago</h2>  
-       <div class="date">
-        November 11, 2022
-       </div> 
+      <div class="city" id="san-francisco">
+        <div>
+          <h2>San-Francisco</h2>
+          <div class="date"></div>
+        </div>
+        <div class="time"></div>
       </div>
-        <div class="time">1:10 <small>PM</small></div>
+
+      <div class="city" id="osaka">
+        <div>
+          <h2>Osaka</h2>
+          <div class="date"></div>
+        </div>
+        <div class="time"></div>
       </div>
-     
-     <div class="city">
-       <div>
-      <h2>Dubai</h2>  
-       <div class="date">
-        November 11, 2022
-       </div> 
-      </div>
-        <div class="time">11:10 <small>PM</small></div>
-      </div>
-  
-    <footer>
-      <small>
-        This project was coded by
-        <strong><a
-          href="mailto:galneufeld@gmail.com"
-          target="_blank"
-          title="Contact Gali Neufeld"
-          >Gali Neufeld</a> </strong>
-        
-        and is
-        <a
-          href="https://github.com/GaliNeufeld/world-clock"
-          target="_blank"
-          title="Github link"
-          >open sourced on Github</a
-        >
-      </small>
-    </footer>
+
+      <footer>
+        <small>
+          This project was coded by
+          <strong
+            ><a
+              href="mailto:galneufeld@gmail.com"
+              target="_blank"
+              title="Contact Gali Neufeld"
+              >Gali Neufeld</a
+            >
+          </strong>
+
+          and is
+          <a
+            href="https://github.com/GaliNeufeld/world-clock"
+            target="_blank"
+            title="Github link"
+            >open sourced on Github</a
+          >
+        </small>
+      </footer>
     </div>
     <script src="javascript/index.js"></script>
   </body>
