--- a/index.html
+++ b/index.html
@@ -12,27 +12,29 @@
   <body>
     <div class="container">
       <h1>World Clock</h1>
-      <select name="" id="">
+      <select name="" id="city">
         <option value="">Select a city</option>
-        <option value="">New York</option>
-        <option value="">Tel-Aviv</option>
-        <option value="">Osaka</option>
-        <option value="">Honolulu</option>
+        <option value="America/New_York">New York</option>
+        <option value="Asia/Tel_Aviv">Tel Aviv</option>
+        <option value="Asia/Tokyo">Osaka</option>
+        <option value="Pacific/Honolulu">Honolulu</option>
       </select>
+      <div id="cities">
       <div class="city" id="san-francisco">
         <div>
-          <h2>San-Francisco</h2>
+          <h2>San Francisco</h2>
           <div class="date"></div>
         </div>
         <div class="time"></div>
       </div>
 
-      <div class="city" id="osaka">
+      <div class="city" id="paris">
         <div>
-          <h2>Osaka</h2>
+          <h2>Paris</h2>
           <div class="date"></div>
         </div>
         <div class="time"></div>
+       </div>
       </div>
 
       <footer>
