Added current location

--- a/index.html
+++ b/index.html
@@ -14,27 +14,28 @@
       <h1>World Clock</h1>
       <select name="" id="city">
         <option value="">Select a city</option>
+        <option value="current">My current location</option>
         <option value="America/New_York">New York</option>
         <option value="Asia/Tel_Aviv">Tel Aviv</option>
         <option value="Asia/Tokyo">Osaka</option>
         <option value="Pacific/Honolulu">Honolulu</option>
       </select>
       <div id="cities">
-      <div class="city" id="san-francisco">
-        <div>
-          <h2>San Francisco</h2>
-          <div class="date"></div>
+        <div class="city" id="san-francisco">
+          <div>
+            <h2>San Francisco</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
 
-      <div class="city" id="paris">
-        <div>
-          <h2>Paris</h2>
-          <div class="date"></div>
+        <div class="city" id="paris">
+          <div>
+            <h2>Paris</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-       </div>
       </div>
 
       <footer>
