--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   </head>
   <body>
     <div class="container">
-      <h1>World Clock</h1>
+      <h1>
+        <a href="/">World Clock</a>
+      </h1>
       <select name="" id="city">
         <option value="">Select a city</option>
         <option value="current">My current location</option>
@@ -40,7 +42,7 @@
 
       <footer>
         <small>
-          This project was coded by
+          Coded by
           <strong
             ><a
               href="mailto:galneufeld@gmail.com"
